Criando Controller de Cliente, alteração nas configurações dos models e mudanças na string de conexão com o banco de dados no appsettings.json

--- a/EbaPizzaria.API/EbaPizzaria.API.csproj
+++ b/EbaPizzaria.API/EbaPizzaria.API.csproj
@@ -12,7 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="efpt.config.json.user" />
   </ItemGroup>
 
 </Project>
