--- a/EbaPizzaria.API/EbaPizzaria.API.csproj
+++ b/EbaPizzaria.API/EbaPizzaria.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,6 +18,10 @@
 
   <ItemGroup>
     <None Include="efpt.config.json.user" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EbaPizzaria.Infra.Ioc\EbaPizzaria.Infra.Ioc.csproj" />
   </ItemGroup>
 
 </Project>
